# gb-asm-tutorial

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  TRANSLATING.md  book.toml  cheatsheet.html  print.html  searchindex.js  searchindex.json  sitemap.xml
.github/workflows/: build-and-deploy.yml  build-unbricked.yml  push-push-container-image.yml
PartIIIGFX/: Readme
css/: custom.css  print.css
galactic-armada/: Makefile  main.asm
galactic-armada/libs/: input.asm  sporbs_lib.asm
i18n-helpers/: Cargo.toml
img_src/: debugger.xcf
it/: cheatsheet.html  print.html  searchindex.js  searchindex.json
it/part2/: input.html
js/: linenos.js  print.js
part2/: input.html
po/: it.po
preproc/: Cargo.toml
preproc/src/: admonitions.rs  git.rs  links.rs  main.rs  preproc.rs
renderer/: Cargo.toml
renderer/src/: main.rs
src/: SUMMARY.md  cheatsheet.md  help-feedback.md  index.md  next.md  resources.md  roadmap.md  thanks.md
src/assets/: hello-world.asm
src/fonts/: googlesanscode.css
src/part1/: assembly.md  bin_and_hex.md  directives.md  header.md  hello_world.md  jumps.md  memory.md  operations.md  palettes.md  registers.md  setup.md  tilemap.md  tiles.md  toolchain.md  tracing.md  wrapup.md
src/part2/: audio.md  bcd.md  bricks.md  collision.md  digit-tilemap.asm  functions.md  getting-started.md  input.md  objects.md  serial-link.md  tail.asm  tilemap.asm  title-screen.md  vblank-interrupt.md  wip.md  (+1 more)
theme/: README.md  head.hbs  highlight.js  index.hbs
unbricked/: 2bpp2asm.c  build_all.sh  main.gb  map2asm.c
(+137 files in other folders)
